# Archimedies

./: .clangformat  .gitignore  .gitmodules  CMakeLists.txt  Dependencies.lua  archimedes.code-workspace  build.py  gen  main.cpp  premake5.lua  readme.md  scene.datatype
core/: .env  premake5.lua
core/src/: 09_shader_base.frag  09_shader_base.vert  app.cpp  app.hpp  core.hpp  main.cpp
core/src/backend/: File.cpp  File.hpp
core/src/backend/logger/: logger.cpp  logger.hpp
core/src/renderer/: Shader.cpp  Shader.hpp
core/src/window/: window.cpp  window.hpp
engine/: CMakeLists.txt  pch.h
engine/kernel/include/: Entity.h  IMaterial.h  ITexture.h  Maths.h  Mesh.h  Ref.h  Scene.h  Serializer.h  UUID.h  types.h
engine/kernel/src/: Serializer.cpp  gltfsource.cpp
engine/renderer/include/: Color.h  IRenderer.h  IShader.h  UiElement.h
engine/renderer/src/: MetalRenderer.mm  MetalViewport.mm
engine/shaders/: test.frag  test.vert
platform/: CMakeLists.txt
platform/include/: Application.h
platform/src/: Application.cpp  Application.mm  Platform.cpp
scripts/: compile_shaders.bat  generate.bat  setup.py
tests/: CMakeLists.txt  test_entity.cpp  test_kernel.cpp  test_maths.cpp  test_serializer.cpp
tests/fuzz/: CMakeLists.txt  kernel_fuzz.cpp
tools/hexeditor/: CMakeLists.txt  generate_test.py  main.cpp
tools/nodeeditor/: CMakeLists.txt  GraphCompiler.h  Helpers.cpp  NodeEditor.h  NodeEditorContext.cpp  NodeSerializer.h  NodeTemplates.cpp  Render.cpp  apptypes.h  main.cpp
tools/texteditor/: Apptypes.hpp  Arena.cpp  Arena.hpp  CMakeLists.txt  Main.cpp  Piecetable.cpp  Piecetable.hpp  String8.cpp  String8.hpp
